--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -19,5 +19,15 @@ body {
   margin: 0 auto;
   padding: 40px;
   display: flex;
-;
+}
+
+@media screen and (max-width: 1240px) {
+  .container {
+    flex-direction: column;
+  }  
+}
+@media screen and (max-width: 680px) {
+  .container {
+    gap: 88px;
+  }  
 }
